# serializer version: 1
# name: test_invalid_model_size_raises_value_error
  '<ExceptionInfo ValueError("Unknown model_size=\'huge\'.") tblen=2>'
# ---
# name: test_invalid_model_verbosity_raises_value_error
  '<ExceptionInfo ValueError("Unsupported model_verbosity=\'subtitle\' for model_size=\'medium\'.") tblen=2>'
# ---
